OO-6371: last question button and equal SQL search for taxonomy